--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Jappaccino</title>
+		<title>Jeffrey Giron</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 <nav>
     		<ul>
@@ -18,5 +18,12 @@
   </head>
   
 	<body>
+   <div class="name">
+			<h1>Jeffrey Giron</h1>
+    </div>
+    <br>
+   <div class="about">
+    <p> 22 year old born and raised in Brooklyn, New York. Currently a student at CUNY Hunter College majoring in Econonmics with minors in Media and Japanese language.</p>
+    </div>
   </body>
 </html>
