--- a/index.html
+++ b/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Jeffrey Giron</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-<nav>
-    		<ul>
-        		<li><a href="html.index">Home</a></li>
-            <br>
-	        	<li><a href="Projects">Projects</a></li>
-            <br>
-        		<li><a href="Photos">Photos</a></li>
-            <br>
-            <br>
-        		<li><a href="">Instagram</a></li>
-    		</ul>
-		</nav>	
-  </head>
-  
-	<body>
-   <div class="name">
-			<h1>Jeffrey Giron</h1>
+<head>
+    <title>Tutorial</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class="nav">
+        <label for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle"/>
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">Photos</a>
+            <a href="#">Projects</a>
+        </div>
     </div>
-    <br>
-   <div class="about">
-    <p> 22 year old born and raised in Brooklyn, New York. Currently a student at CUNY Hunter College majoring in Econonmics with minors in Media and Japanese language.</p>
-    </div>
-  </body>
+</body>
 </html>
