--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
         <input type="checkbox" id="toggle"/>
         <div class="menu">
             <a href="#">Home</a>
-            <a href="#">Photos</a>
-            <a href="#">Projects</a>
+          <div class="dropdown">
+  <button class="dropbtn">Projects</button>
+  <div class="dropdown-content">
+    <a href="#">Snack </a>
+    <a href="#">Video Player</a>
+    <a href="#">Folder Poetry</a>
+    <a href="#">Responsive</a>
+    <a href="#">Landing</a>
+  </div>
+</div>  
+         <a href="#">Photos</a>
+
         </div>
     </div>
+  <div class="about">
+    <p>Hello, I am <span>Jeffrey Giron</span></p>
+      <p> A student at Hunter College majoring in Economics and minoring in Media Production and Japanese Language. In my off time I am learning Adobe Suite software, watching tech reviews, and competing in collegiate E-Sports.
 </body>
 </html>
