--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tutorial</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
+<div class="nav">
+	<label for="toggle" id="toggle_label">&#9776;</label>
+    <input type="checkbox" id="toggle"/>
+  		<ul class="mainmenu">
+    		<li><a href="#1">Home</a>
+    		<li><a href="#2">Projects</a>
+      <ul class="submenu">
+        <li><a href="#11">Snack</a></li>
+        <li><a href="#12">Video Player</a></li>
+        <li><a href="#13">Folder Poetry</a></li>
+        <li><a href="#14">Responsive</a></li>
+        <li><a href="#11">Landing Page</a></li>
+        <li><a href="#12">Randomized Poem</a></li>
+        <li><a href="#13">Image Slide</a></li>
+      </ul>
+    </li>
+    <li><a href="#2">Photos</a></li>
+    <a href='linkedin.com'><i class='fab fa-linkedin' style='font-size:36px'></i></a>
+    <a href='instagram.com'><i class='fab fa-instagram' style='font-size:36px'></i></a>
+  </ul>
+</div>
 <body>
-    <div class="nav">
-        <label for="toggle">&#9776;</label>
-        <input type="checkbox" id="toggle"/>
-        <div class="menu">
-            <a href="#">Home</a>
-          <div class="dropdown">
-  <button class="dropbtn">Projects</button>
-  <div class="dropdown-content">
-    <a href="#">Snack </a>
-    <a href="#">Video Player</a>
-    <a href="#">Folder Poetry</a>
-    <a href="#">Responsive</a>
-    <a href="#">Landing</a>
-  </div>
-</div>  
-         <a href="#">Photos</a>
-
-        </div>
-    </div>
-  <div class="about">
-    <p>Hello, I am <span>Jeffrey Giron</span></p>
+	<div class="about">
+    <p>Hello, I am <span>Jeffrey</span></p>
       <p> A student at Hunter College majoring in Economics and minoring in Media Production and Japanese Language. In my off time I am learning Adobe Suite software, watching tech reviews, and competing in collegiate E-Sports.
+      </div>
 </body>
 </html>
